# ranged-mmap

./: Cargo.toml  README.md  README_CN.md
benches/: concurrent_write.rs
src/: file.rs  lib.rs
src/file/: allocator.rs  error.rs  mmap_file.rs  mmap_file_inner.rs  range.rs  tests.rs
src/file/allocator/: concurrent.rs  sequential.rs
