[package]
name = "ranged-mmap"
version = "0.3.1"
edition = "2024"
authors = ["ShaoG <shaog.rs@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Type-safe memory-mapped file library with lock-free concurrent writes to non-overlapping ranges"
readme = "README.md"
repository = "https://github.com/ShaoG-R/ranged-mmap"
homepage = "https://github.com/ShaoG-R/ranged-mmap"
documentation = "https://docs.rs/ranged-mmap"
keywords = ["mmap", "memory-map", "concurrent", "lock-free", "zero-copy"]
categories = ["filesystem", "concurrency", "memory-management", "os"]
exclude = [
    "target/*",
    ".git/*",
    ".github/*",
    "benches/*",
    "*.md",
    "!README.md",
]

[dependencies]
memmap2 = "0.9.9"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
criterion = { version = "0.7.0", features = ["async_tokio"] }
tempfile = "3.23.0"

[[bench]]
name = "concurrent_write"
harness = false
